2005-12-24  Ben Elliston  <bje@gnu.org>

	* configure.ac (DOCBOOK2X_TEXI): Add search for this program.
	* configure: Regenerate.
	* Makefile.am (DOCBOOK2PDF, DOCBOOK2RTF, DOCBOOK2PS): New.
	(DOCBOOK2HTML, DOCBOOK2X_TEXI): Likewise.
	(dejagnu.pdf): Use $(DOCBOOK2PDF).
	(dejagnu.ps): Likewise, use $(DOCBOOK2PS).
	(dejagnu.rtf): Likewise, use $(DOCBOOK2RTF).
	(html): Likewise, use $(DOCBOOK2HTML).
	(doc/dejagnu.texi): Produce using the docbook2x-texi wrapper,
	which is much simpler. Likewise, use $(DOCBOOK2X_TEXI).
	* Makefile.in: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* Makefile.am (EXTRA_DIST): Remove $(PACKAGING_METAFILES).
	(XML): Remove $(srcdir) from each filename; VPATH suffices.
	(PACKAGING_METAFILES): Remove.
	* Makefile.in: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* README: Rewrite.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* COPYING: Update.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* testsuite/libdejagnu/tunit.exp: Don't change to a non-existent
	subdirectory.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* Makefile.am (RUNTEST): Simplify, as Automake already generates
	similar logic in Makefile.in.
	* Makefile.in: Regenerate.
	
2005-12-24  Ben Elliston  <bje@gnu.org>

	* Makefile.am (RUNTESTDEFAULTFLAGS): Omit --tool so that
	libdejagnu tests are run too.
	* Makefile.in: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* configure: Regenerate.

	* lib/remote.exp: Tidy.
	* lib/targetdb.exp: Likewise.
	* lib/target.exp (prune_warnings): Improve comments.
	* lib/dejagnu.exp: Likewise.
	* lib/utils.exp: Likewise.

	* NEWS: Update.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml: Don't use apostrophes in section titles.
	* doc/dejagnu.texi: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* Makefile.am (XML): Include $(srcdir) in filenames.
	* Makefile.in: Regenerate.

2005-12-24  Ben Elliston  <bje@gnu.org>

	* doc/C/Makefile.am: Remove.
	* doc/C/Makefile.in: Likewise.

	* Makefile.am (SUBDIRS): Remove.